--- a/src/main/resources/META-INF/resources/WEB-INF/jsp/common/navigation.jspf
+++ b/src/main/resources/META-INF/resources/WEB-INF/jsp/common/navigation.jspf
@@ -4,9 +4,16 @@
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="/todo/list-todos">Todos</a></li>
+
+
         </ul>
     </div>
     <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="/login">Logout</a></li>
+        <li class="nav-item"><a class="nav-link" href="/">${name}</a></li>
+        <li class="nav-item"><a class="nav-link" href="/logout">
+
+            Logout</a></li>
+
+
     </ul>
 </nav>
