--- a/src/main/resources/META-INF/resources/WEB-INF/jsp/common/navigation.jspf
+++ b/src/main/resources/META-INF/resources/WEB-INF/jsp/common/navigation.jspf
@@ -9,7 +9,7 @@
         </ul>
     </div>
     <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="/">${name}</a></li>
+        <li class="nav-item"><a class="nav-link" href="/">${username}</a></li>
         <li class="nav-item"><a class="nav-link" href="/logout">
 
             Logout</a></li>
